# basis_tech2

./: .code-auditor.example.toml  .code-auditor.toml  .gitignore  README.md  pyproject.toml
src/code_auditor/: __init__.py  __main__.py  cli.py  config.py  models.py  registry.py
src/code_auditor/analyzers/: __init__.py  ai_analyzer.py  bandit_analyzer.py  base.py  pip_audit_analyzer.py  pylint_analyzer.py  radon_analyzer.py  semgrep_analyzer.py  vulture_analyzer.py
src/code_auditor/llm/: __init__.py  prompts.py  provider.py
src/code_auditor/reports/: html_report.py  json_report.py  markdown_report.py
tests/: test_analyzers.py  test_cli.py  test_models.py
